# projectXballoon

./: .gitignore  test.py
data/run_id/: run_id.txt
exsamples/simple_loop/: simple_loop.rb
ground/: CmakeLists.txt
ground/command_sender/command_plan/20251125/: comand_plan.txt
ground/command_sender/command_plan/20260122/: comand_plan.txt
ground/command_sender/command_plan/20260222/: comand_plan.txt
ground/command_sender/command_plan/20260226/: comand_plan.txt
ground/command_sender/command_plan/20260318/: comand_plan.txt
ground/command_sender/command_plan/20260428/: comand_plan.txt
ground/command_sender/source/: CMakeLists.txt  CommandBuilder.cc  CommandBuilder.hh  CommandSaver.cc  CommandSaver.hh  CommandSender.cc  CommandSender.hh  TestCode.cc  dump_command.cc  run_command_plan.cc  run_command_plan.cc.bak  run_command_plan.cc.old  send_command.cc
ground/include/: CommandBuilder.hh  QLForProjectX.hh  TelemetryDefinition.hh  WaitFor.hh
ground/rubyext/: Balloon.i
ground/rubyext.bak/: Balloon.i
ground/run/: command_test.py  test.rb
ground/src/: BinaryFileManipulater.cc  CRC16.cc  CommandBuilder.cc  QLForProjectX.cc  TelemetryDefinition.cc
hsquicklook/: index.html
hsquicklook/js/: hsquicklook.main.js
hsquicklook/user_data/: user_configuration.json  user_view.css
hsquicklook/user_data/schema/Elmo/: Elmo.js
hsquicklook/user_data/schema/GNSS/: gnss.js
hsquicklook/user_data/schema/HK/: hk.js
hsquicklook/ws_server/: hsquicklook_ws_server.rb
html/: annotated.html  classes.html  classgpiod_1_1chip.html  classgpiod_1_1chip__iter.html  classgpiod_1_1line.html  classgpiod_1_1line__bulk.html  classgpiod_1_1line__bulk_1_1iterator.html  classgpiod_1_1line__iter.html  deprecated.html  dir_000002_000000.html  dir_00240dc4a1a4845ae58be68fbad02d02.html  dir_00240dc4a1a4845ae58be68fbad02d02_dep.dot  dir_4bd27d548e558c789fa6380ff78591b6.html  dir_4bd27d548e558c789fa6380ff78591b6_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_eval.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  gpiod_8h.html  gpiod_8h__dep__incl.dot  gpiod_8h__incl.dot  gpiod_8h_source.html  gpiod_8hpp.html  gpiod_8hpp__incl.dot  gpiod_8hpp_source.html  graph_legend.html  group__chips.html  group__common.html  group__gpiod__cxx.html  group__high__level.html  group__iterators.html  group__line__bulk.dot  (+27 more)
logger/GL860_SDK/: Readme.txt
logger/GL860_SDK/LabView VI/Driver/: GLdrv_AMP_FILT.vi  GLdrv_AMP_INP.vi  GLdrv_AMP_RANG.vi  GLdrv_AMP_TEMPR.vi  GLdrv_ANN.vi  GLdrv_COMMON_IDN.vi  GLdrv_Close.vi  GLdrv_Close_TCPIP.vi  GLdrv_DATA_REC.vi  GLdrv_FILE_CD.vi  (+38 more)
logger/GL860_SDK/USB/: gtcusbr.h  gtcusbr.lib
onboard/: CMakeLists.txt  CMakeLists.txt.old
onboard/ground/: CMakeLists.txt
onboard/ground/rubyext/: Balloon.i  CMakeLists.txt
onboard/modules/include/: CommandTransfer.hh  SocketTransceiver_TCP.hh  TelemetryReceiver_UDP.hh
onboard/modules/src/: CommandTransfer.cc  SocketTransceiver_TCP.cc  TelemetryReceiver.cc
onboard/pyext/: Balloon.i  CMakeLists.txt
onboard/reader/: dat_to_log.py
onboard/rubyext/: Balloon.i  CMakeLists.txt
onboard/source/: CMakeLists.txt
onboard/source/core/: CMakeLists.txt
onboard/source/core/include/: BME680IO.hh.bak  BinaryFileManipulater.hh  CommandDefinition.hh  DateManager.hh  ErrorManager.hh  MAX31865IO.hh  SPIInterface.hh  SerialCommunication.hh  SlowADCIO.hh.bak  TelemetryDefinition.hh
onboard/source/core/src/: CommandDefinition.cc  DateManager.cc  ErrorManager.cc  MAX31865IO.cc.bak  SerialCommunication.cc  TelemetryDefinition.cc
onboard/source/gl860/: GL860main.cc  GL860main.hh  a.out  run.cc
onboard/source/modules/: CMakeLists.txt
onboard/source/modules/include/: GetEnvironmentalData.hh.bak  GetGL860Data.hh  GetRaspiStatus.hh  GetRelayStatus.hh  InterpretTelemetry.hh  MongoDBClient.hh  PushToMongoDB.hh  ReadCommand.hh.bak  ReadTelemetry.hh  ReceiveCommand.hh  ReceiveEUResponse.hh  ReceiveTelemetry.hh  RelayControl.hh  RunIDManager.hh  SPIManager.hh  SendTelemetry.hh  ShutdownSystem.hh  SimpleLoop.hh  SocketTransceiver.hh  TelemetryReceiver.hh  TelemetryStruct.hh  eu_struct.hh
onboard/source/modules/src/: GetGL860Data.cc  GetRaspiStatus.cc  GetRelayStatus.cc  InterpretTelemetry.cc  MeasureAcceleration.cc.bak  MongoDBClient.cc  PushToMongoDB.cc  ReadCommand.cc  ReadTelemetry.cc  ReceiveCommand.cc  ReceiveEUResponse.cc  ReceiveTelemetry.cc  RelayControl.cc  RelayTestRun.cc.bak  RunIDManager.cc  SPIManager.cc  SendTelemetry.cc  ShutdownSystem.cc  SimpleLoop.cc  SocketTransceiver.cc  TelemetryReceiver.cc  libgpiod_test.c
onboard/test/: CMakeLists.txt  Makefile  ReceiveCommand.rb
onboard/tool/include/: CRC16.hh  ReceiveCommand.hh  SocketTransceiver.hh  SocketTransceiver_UDP.hh
onboard/tool/src/: ReceiveCommand.cc  SocketTransceiver.cc
operation/monitor/: monitor.rb
operation/onboard/: test.rb
run2025Nov/: extended_server.py  run_test.rb  simple_server.py
setting_templates/boot/: config.txt
setting_templates/rc_local/: rc_local.txt
simulater/: README.txt  elmo_rs_structure.h  eu_struct.h  rs_client.c  rs_server  rs_server.c  コマンドの説明_ver1.0用.docx
simulater/server_ehime/: elmo_control.h  elmo_rs_structure_v2p0.h  rs_client.c  rs_server_v4.2.c
starter/: starter.sh
trushbox/: CommandSender.cc  CommandSender.hh  CopyOfMongoDBClient.cc  CopyOfReadTelemetry.cc  CopyOfReadTelemetry.hh  PushToMongoDB.cc  PushToMongoDB.hh  SocketTransceiver_UDP.cc  SocketTransceiver_UDP.hh  TelemetryDefinition.cc  TelemetryDefinition.hh  TelemetryDefinition_ground.cc  TelemetryDefinition_ground.hh
trushbox/ground_source/include/: DocumentBuilder.hh  GNSSForISAS.hh  TelemetryReceiver.hh
trushbox/ground_source/src/: DocumentBuilder.cc  GNSSForISAS.cc  MongoDBClient.cc  TelemetryReceiver.cc  TelemetryReceiver_UDP.cc  WaitFor.cc
trushbox/modules/include/: ReceiveCommand.hh
trushbox/modules/src/: ReceiveCommand.cc
trushbox/tool/include/: ReadCommand.hh
trushbox/tool/src/: ReadCommand.cc
(+177 files in other folders)
